k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easi-frontend
  namespace: enterprisearchitecture-pnpbj
  labels:
    owner: maosk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easi-frontend
  template:
    metadata:
      labels:
        app: easi-frontend
        owner: maosk
    spec:
      containers:
      - image: 579478677147.dkr.ecr.eu-central-1.amazonaws.com/architecture/easi-frontend:$(Build.BuildNumber)
        name: easi-frontend
        ports:
        - name: internal
          containerPort: 8080
        resources:
          requests:
            memory: "20Mi"
            cpu: "50m"
          limits:
            memory: "100Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
